# mjs-trader

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py
include/core_lib/: trader_core_lib.hpp
src/: main.cpp
src/core_lib/: trader_core_lib.cpp
